re PR c++/44412 (Another bogus set-but-not-used warning)

PR c++/44412
	* typeck.c (build_class_member_access_expr): Call mark_exp_read
	on object for static data members.

	* g++.dg/warn/Wunused-var-10.C: New test.
	* g++.dg/warn/Wunused-var-11.C: New test.

From-SVN: r160290